--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">easternCalc</string>
+    <string name="app_name" translatable="false">easternCalc</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="calcular">Calcular</string>
     <string name="indique_anno">Indique el año</string>
-    <string name="domingo_ramos">Domingo de Ramos</string>
+    <string name="domingo_resurrecion">Domingo de Ramos</string>
     <string-array name="fechas_relevantes">
         <item >Miércoles de Ceniza</item>
         <item>Viernes de dolor</item>
