--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -5,4 +5,7 @@
     <string name="domingo_resurrecion">Good Sunday</string>
     <string name="indique_anno">Enter Year</string>
     <string name="menu_settings">Settings</string>
+    <string name="miercoles_ceniza">Ash Wednesday</string>
+    <string name="viernes_dolor">Good Friday</string>
+    <string name="Pentecostes">Pentecost</string>
 </resources>
